# wencai

./: masonite.sqlite3  pyproject.toml  requirements.txt
app/controllers/: BlogController.py  __init__.py
app/models/: Post.py
databases/migrations/: 2023_05_27_110839_create_posts_table.py
routes/: web.py
templates/blog/: blog.html
